--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -163,7 +163,7 @@
         flex-direction: column; 
         justify-content: center; 
         align-items: center; 
-        padding: 1.5rem;
+        //padding: 1.5rem;
         text-align: center; opacity: 0; transition: 0.4s; z-index: 3;
         
         i { font-size: 2rem; margin-bottom: 1rem; color: $color-primary; }
